[package]
name = "gas_estimator"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4.3" 
alloy-sol-types = { version = "0.8.14", features = ["std", "eip712-serde"] }
lazy_static = "1.5"
thiserror = "2.0"
anyhow = "1.0"

